--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "premiumphotography",
   "version": "2.0.0",
   "private": true,
+  "license": "MIT",
+
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
